code updated according to sawgger
